--- a/app/views/cities/_form.html.erb
+++ b/app/views/cities/_form.html.erb
@@ -2,6 +2,16 @@
   <div class="row">
         <div class="card-box">
 
+<style>
+  
+  .submitted{
+    width: 100px;    
+  }
+  .back{
+    width: 100px;
+  }
+
+</style>
 
 <%= form_for(city) do |f| %>
   <% if city.errors.any? %>
@@ -52,10 +62,10 @@
 
               <div class="row m-t-30 text-center">
               
-                <div class="col-md-6">
+                <div class="col-md-6 submitted">
                   <%= f.submit "Submit", class: 'btn btn-primary' %>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 back">
                   <%= link_to 'Back', cities_path, class: 'btn btn-primary' if request.url.include?("new")%> 
                 </div> 
                 <div class="col-md-3">
