--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,5 +1,27 @@
 <p id="notice"><%= notice %></p>
-
+<style>
+table {
+    width:50%;
+}
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+th, td {
+    padding: 5px;
+    text-align: left;
+}
+table#t01 tr:nth-child(even) {
+    background-color: #eee;
+}
+table#t01 tr:nth-child(odd) {
+   background-color:#fff;
+}
+table#t01 th {
+    background-color: black;
+    color: white;
+}
+</style>
 <h1>Cities</h1>
 
 <table>
