--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -32,7 +32,7 @@ table#t01 th {
       <th>Country</th>
       <th>Lat</th>
       <th>Lng</th>
-      <th colspan="3"></th>
+      <th colspan="3">Action</th>
     </tr>
   </thead>
 
