page design changes

--- a/app/views/cities/_form.html.erb
+++ b/app/views/cities/_form.html.erb
@@ -3,7 +3,12 @@
         <div class="card-box">
 
 <style>
-  
+  .card-box{
+    width: 50%;
+  }
+  .form-control{
+    width: 50%;
+  }
   .submitted{
     width: 100px;    
   }
