--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,37 +1,70 @@
+<div class="card-box">
 <p id="notice"><%= notice %></p>
+<style>
+table {
+    width:50%;
+}
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+th, td {
+    padding: 5px;
+    text-align: left;
+}
+table#t01 tr:nth-child(even) {
+    background-color: #eee;
+}
+table#t01 tr:nth-child(odd) {
+   background-color:#fff;
+}
+table#t01 th {
+    background-color: black;
+    color: white;
+}
+.space{
+  margin-top: 1%;
+}
+.card-box{
+  width: 50%
+}
 
-<p>
-  <strong>Name:</strong>
-  <%= @city.name %>
-</p>
+</style>
 
-<p>
-  <strong>State:</strong>
-  <%= @city.state %>
-</p>
+<table id="t01">
+  <tr>
+    <th>Name</th>
+    <th>Value</th> 
+  </tr>
+  <tr>
+    <td>Name</td>
+    <td><%= @city.name %></td> 
 
-<p>
-  <strong>Country:</strong>
-  <%= @city.country %>
-</p>
+  </tr>
+  <tr>
+    <td>State</td>
+    <td><%= @city.state %></td>
+  </tr>
+  <tr>
+    <td>Country</td>
+    <td><%= @city.country %></td>
+  </tr>
+  <tr>
+    <td>Latitude</td>
+    <td><%= @city.lat %></td>
+  </tr>  
+  <tr>
+    <td>Langitude</td>
+    <td><%= @city.lng %></td>
+  </tr>  
+</table>
 
-<p>
-  <strong>Lat:</strong>
-  <%= @city.lat %>
-</p>
-
-<p>
-  <strong>Lng:</strong>
-  <%= @city.lng %>
-</p>
-                <div class="row">
+                <div class="row space">
                 <div class="col-md-3">
-                  <%= link_to 'Back', cities_path, class: 'btn btn-primary'%> 
+                  <%= link_to 'Edit', edit_city_path(@city), class: 'btn btn-primary edit'%> 
+                  <%= link_to 'Back', cities_path, class: 'btn btn-primary back'%>
                 </div> 
-                <div class="col-md-3">
-                  <%= link_to 'Edit', edit_city_path(@city), class: 'btn btn-primary'%> 
-                </div>                                                    
-              </div>  
-              </div>
+
+</div>              
 <%#= link_to 'Edit', edit_city_path(@city) %> 
 <%#= link_to 'Back', cities_path %>
